<resources>
    <string name="app_name">ORDERS</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appname">Narudžbe</string>
    <string name="companyname">Eurocompany 99</string>
    <string name="id">ID</string>
    <string name="password">Lozinka</string>
    <string name="submit">Prijava</string>
    <string name="url">URL</string>
    <string name="rights">Hera d.o.o. Sva prava pridržana.</string>
    <string name="orderempty">Popis narudžbi je prazan</string>
    <string name="neworder">+Nova Narudžba</string>
    <string name="sendallorders">Pošalji sve narudžbe</string>
    <string name="deleteallorders">Obriši sve narudžbe</string>
    <string name="deletesendorders">Obriši poslane narudžbe</string>
    <string name="deleteunsendorders">Obriši narudžbe koje nisu poslane</string>
    <string name="deleteitem">Obriši narudžbu?</string>
    <string name="yes">Da!</string>
    <string name="date">Datum:&#160;</string>
    <string name="sended">Poslano:&#160;</string>
    <string name="partners">Partneri</string>
    <string name="articles">Artikli</string>
    <string name="assortment">Asortiman</string>
    <string name="route">Rute</string>
    <string name="setup">Promijeni URL</string>
    <string name="refreshdata">Osvježi podatke</string>
    <string name="logout">Odjava</string>
    <string name="code">Kod:&#160;</string>
    <string name="amount">Cijena:&#160;</string>
    <string name="address">Adresa:&#160;</string>
    <string name="city">Grad:&#160;</string>
    <string name="unit">Jedinica:&#160;</string>
    <string name="monday">Ponedjeljak</string>
    <string name="tuesday">Utorak</string>
    <string name="wednesday">Srijeda</string>
    <string name="thursday">Četvrtak</string>
    <string name="friday">Petak</string>
    <string name="saturday">Subota</string>
    <string name="update">Ažuriraj</string>
    <string name="totalprice">Ukupna cijena:&#160;</string>
    <string name="editorder">Uredi narudžbu</string>
    <string name="submitorder">Pošalji narudžbu</string>
    <string name="additems">+Dodaj proizvod</string>
    <string name="singleorderempty">Narudžba prazna</string>
    <string name="quantity">Količina:&#160;</string>
    <string name="enternote">Dodaj napomenu</string>
    <string name="saveandcontinue">Spremi i nastavi</string>
    <string name="emptyassortment">Za ovog partnera ne postoje asortimani</string>
    <string name="saveorder">Spremi narudžbu</string>
    <string name="edititem">Uredi artikal</string>
    <string name="packaging">Broj pakiranja</string>
    <string name="save">Spremi</string>
</resources>
