<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/groupone">
        <item android:id="@+id/orders"
            android:title="@string/appname" />
        <item android:id="@+id/partner"
            android:title="@string/partners" />
        <item android:id="@+id/article"
            android:title="@string/articles" />
        <item android:id="@+id/partnerweek"
            android:title="@string/route" />
    </group>


    <group
        android:id="@+id/grouptwo">
        <item android:id="@+id/setup"
            android:title="@string/setup" />
        <item android:id="@+id/refresh"
            android:title="@string/refreshdata" />
    </group>
    <group
        android:id="@+id/groupthree">
        <item android:id="@+id/logout"
            android:title="@string/logout" />
    </group>
</menu>