<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hera.com.orders.LoginActivity"
    android:background="#CECECE"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/img_412721324" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/companyname"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="#323643"/>
    <EditText
        android:id="@+id/ID"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:hint="@string/id"
        android:background="@drawable/edittext" />



    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/edittext"
        android:hint="@string/url" />


    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:fontFamily="sans-serif"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        android:text="@string/submit" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:textSize="15dp"
        android:gravity="center"
        android:text="@string/rights" />
</RelativeLayout>


</LinearLayout>
