<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="74dp"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"
        android:text="TextView"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="#323643"
        android:textSize="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#323643"
            android:text="@string/code"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="165dp"
            android:layout_height="18dp"
            android:fontFamily="sans-serif"
            android:textColor="#9E9E9E"
            android:text="TextView"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="9dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#323643"
            android:text="@string/amount"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:fontFamily="sans-serif"
            android:textColor="#9E9E9E"
            android:text=""
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#323643"
            android:text="@string/address"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="170dp"
            android:layout_height="18dp"
            android:fontFamily="sans-serif"
            android:textColor="#9E9E9E"
            android:text="TextView"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="-5dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#323643"
            android:text="@string/city"
            android:textSize="12dp" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:fontFamily="sans-serif"
            android:textColor="#9E9E9E"
            android:text="TextView"
            android:textSize="12dp" />
    </LinearLayout>
</LinearLayout>