<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="74dp"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="9dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:text="TextView"
        android:textColor="#323643"
        android:textSize="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="18dp"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textSize="12dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#323643"
            android:text="@string/code" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textSize="12dp"
            android:text="TextView"
            android:textColor="#9E9E9E"
            android:fontFamily="sans-serif" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginRight="9dp"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textSize="12dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#323643"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="30dp"
            android:layout_height="18dp"
            android:fontFamily="sans-serif"
            android:text="TextView"
            android:textColor="#9E9E9E"
            android:textSize="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:textSize="12dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textColor="#323643"
            android:text="@string/unit" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="30dp"
            android:layout_height="18dp"
            android:textSize="12dp"
            android:textColor="#9E9E9E"
            android:fontFamily="sans-serif"
            android:text="TextView" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>